--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,24 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.1.16</version> <!-- Mettez à jour la version si nécessaire -->
+        </dependency>
+
+
+
+
+
+
         <dependency>
             <groupId>org.culturetripp</groupId>
             <artifactId>TonActiviter</artifactId>
